--- a/Primeiro_projeto_com_Gemini.ipynb
+++ b/Primeiro_projeto_com_Gemini.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNpBzDfKn1JEJPQ18KQTxXB",
+      "authorship_tag": "ABX9TyM1EvDeXP6lNLXxqvdY/vpi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +38,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "vNa_08fugIgC"
       },
@@ -53,13 +53,16 @@
         "# Import the Python SDK\n",
         "import google.generativeai as genai\n",
         "\n",
-        "GOOGLE_API_KEY='AIzaSyAgzfSXCPiOTbUv4Y34rm2rgOGEfecsO8k'\n",
-        "genai.configure(api_key=GOOGLE_API_KEY)"
+        "from google.colab import userdata\n",
+        "\n",
+        "api_key = userdata.get('SECRET_KEY')\n",
+        "GOOGLE_API_KEY=''\n",
+        "genai.configure(api_key=api_key)"
       ],
       "metadata": {
         "id": "reZJd7k_guTl"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -86,7 +89,7 @@
         "id": "apwKJi0thKwF",
         "outputId": "3ea2916b-61de-422e-e402-1fdf8fdf6b35"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -133,7 +136,7 @@
       "metadata": {
         "id": "ITK1tya8i0AX"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -158,7 +161,7 @@
       "metadata": {
         "id": "_gQALihlkx7A"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -182,7 +185,7 @@
       "metadata": {
         "id": "1vp6ZI6fly-N"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -200,7 +203,7 @@
         "id": "9xWGbUqZm9LI",
         "outputId": "d280fc9a-4f97-462a-a2a9-6805c31a625f"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -248,7 +251,7 @@
       "metadata": {
         "id": "pMXPA5jXnZsH"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -268,7 +271,7 @@
         "id": "Uud1AOQqoI5s",
         "outputId": "f8e92da9-b8f7-497c-e703-da548b230634"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -291,7 +294,7 @@
         "id": "3VG9quSjrB4O",
         "outputId": "f1c22d36-6ede-4df8-e0a9-d728f34e4083"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -346,7 +349,7 @@
         "id": "Qh3cq-YprUJM",
         "outputId": "740706d8-acd9-4e21-c4a0-44fd895249b9"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
