--- a/RS.ipynb
+++ b/RS.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMzCTMPw9rtuzB6NpvtI2al",
+      "authorship_tag": "ABX9TyPyilIa68lCailEKMm+eRka",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -274,39 +274,31 @@
         "model_2 = genai.GenerativeModel(\"gemini-1.0-pro\",\n",
         "                                generation_config=generation_config)\n",
         "\n",
-        "#consulta = 'Rio grande do sul'\n",
-        "\n",
-        "\n",
-        "print(trecho)\n",
-        "\n",
         "print(\"\\n \\n\")\n",
         "\n",
         "if(opcoes == '1'):\n",
         "  consulta = \"Cronologia\"\n",
-        "  print('entrou1')\n",
         "elif(opcoes == '2'):\n",
         "  consulta =  \"Como Ajudar\"\n",
-        "  print('entrou2')\n",
         "elif(opcoes == '3'):\n",
         "  consulta =  \"Ações do Governo\"\n",
         "\n",
-        "\n",
         "trecho = gerar_e_buscar_consulta(consulta, df, model)\n",
         "\n",
-        "propt = consulta, f'me fale sobre sem fugir do contexto: {trecho}'\n",
+        "prompt =  f'{consulta} me fale sobre sem fugir do contexto: {trecho}'\n",
         "\n",
         "response = model_2.generate_content(prompt)\n",
-        "#print(response.text)"
+        "print(response.text)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 967
+          "height": 904
         },
         "id": "NcMdIY4YhzFc",
-        "outputId": "0800dd82-13ba-4312-98c6-d517a3dcbb09"
+        "outputId": "fc240321-f0cf-4295-e77c-f200df91dc28"
       },
-      "execution_count": 166,
+      "execution_count": 173,
       "outputs": [
         {
           "output_type": "stream",
@@ -331,31 +323,34 @@
             "3 - Ações do Governo\n",
             " \n",
             "\n",
-            "Digite o numero de uma das opções: 1\n",
-            "A tragédia no Rio Grande do Sul teve início no final de abril, quando fortes chuvas e granizo assolaram o Vale do Rio Pardo e outras regiões do estado. O Instituto Nacional de Meteorologia emitiu o primeiro alerta vermelho em 29 de abril, indicando volume elevado de chuvas. Essas chuvas foram provocadas por uma combinação de fatores, incluindo uma massa de ar quente sobre o centro do país, bloqueando uma frente fria na região sul e mantendo a instabilidade sobre o estado.\n",
-            "No dia seguinte, em 30 de abril, foram registradas as primeiras cinco mortes da tragédia, com desaparecidos e inúmeros municípios impactados. O estado de calamidade pública foi decretado em 1º de maio, quando o número de afetados ultrapassou 19 mil pessoas e mais cinco mortes foram contabilizadas.\n",
-            "A situação continuou a piorar nos dias seguintes, com aumento do número de mortos e desaparecidos. Em 2 de maio, a Defesa Civil alertou para o possível colapso da barragem da Usina Hidrelétrica 14 de Julho, levando à evacuação de áreas de risco.\n",
-            "Em 3 de maio, mais da metade do estado já estava afetada, com inundações graves em diversas cidades. O rio Taquari foi colocado em situação de inundação severa, aumentando ainda mais o número de vítimas.\n",
-            "Em 4 de maio, o número de mortos superou o da tragédia de 2023, com milhares de pessoas desabrigadas e danos generalizados à infraestrutura pública e privada. A falta de energia elétrica e comunicações agravou ainda mais a situação.\n",
-            "Em 5 de maio, o governador comparou a situação a um 'cenário de guerra', destacando a necessidade de um plano de recuperação semelhante ao Plano Marshall. As doações e assistência começaram a se organizar, mas o número de vítimas continuava a aumentar.\n",
-            "A situação se estendeu até o início de maio, com chuvas persistentes e novos desafios, como a queda nas temperaturas e previsão de mais chuvas. O número de afetados e desabrigados continuou a crescer, destacando a magnitude da tragédia e a necessidade de apoio contínuo para a recuperação e reconstrução das áreas atingidas.\n",
+            "Digite o numero de uma das opções: 3\n",
             "\n",
             " \n",
             "\n",
-            "entrou1\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "contents must not be empty",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-166-7443855a918b>\u001b[0m in \u001b[0;36m<cell line: 51>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     49\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     50\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 51\u001b[0;31m \u001b[0mresponse\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel_2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgenerate_content\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprompt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     52\u001b[0m \u001b[0;31m#print(response.text)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/google/generativeai/generative_models.py\u001b[0m in \u001b[0;36mgenerate_content\u001b[0;34m(self, contents, generation_config, safety_settings, stream, tools, tool_config, request_options)\u001b[0m\n\u001b[1;32m    238\u001b[0m             \u001b[0mrequest_options\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mOptions\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mthe\u001b[0m \u001b[0mrequest\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    239\u001b[0m         \"\"\"\n\u001b[0;32m--> 240\u001b[0;31m         request = self._prepare_request(\n\u001b[0m\u001b[1;32m    241\u001b[0m             \u001b[0mcontents\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcontents\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    242\u001b[0m             \u001b[0mgeneration_config\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mgeneration_config\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/google/generativeai/generative_models.py\u001b[0m in \u001b[0;36m_prepare_request\u001b[0;34m(self, contents, generation_config, safety_settings, tools, tool_config)\u001b[0m\n\u001b[1;32m    133\u001b[0m         \u001b[0;34m\"\"\"Creates a `glm.GenerateContentRequest` from raw inputs.\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    134\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mcontents\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 135\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"contents must not be empty\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    136\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    137\u001b[0m         \u001b[0mtools_lib\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_get_tools_lib\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtools\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mTypeError\u001b[0m: contents must not be empty"
+            "**Ações do Governo para Lidar com as Enchentes no Rio Grande do Sul**\n",
+            "\n",
+            "* **Estimativa de Custos e Pilares de Atuação:**\n",
+            "    * Custo estimado: R$ 19 bilhões\n",
+            "    * Pilares: resposta, assistência, reestabelecimento e reconstrução\n",
+            "\n",
+            "* **Financiamento e Recursos:**\n",
+            "    * Suspensão da dívida e criação de fundo constitucional\n",
+            "    * Esforços conjuntos com o governo federal\n",
+            "\n",
+            "* **Plano de Reconstrução:**\n",
+            "    * Reforço das forças de segurança\n",
+            "    * Medidas ambientais para recuperação de ecossistemas\n",
+            "\n",
+            "* **Distribuição de Recursos:**\n",
+            "    * Critérios claros para distribuição de doações\n",
+            "    * Foco nas áreas mais afetadas e famílias necessitadas\n",
+            "\n",
+            "* **Transparência e Agilidade:**\n",
+            "    * Cadastramento direto nos municípios\n",
+            "    * Cartão de débito pré-pago para recebimento de recursos\n",
+            "\n",
+            "* **Apoio à População:**\n",
+            "    * Compra e entrega de cobertores para enfrentar o frio\n"
           ]
         }
       ]
