--- a/RS.ipynb
+++ b/RS.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPyilIa68lCailEKMm+eRka",
+      "authorship_tag": "ABX9TyMDzAZgLN+n+lTy0bFE+u+/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,7 +45,7 @@
         "import pandas as pd\n",
         "import google.generativeai as genai\n",
         "\n",
-        "GOOGLE_API_KEY=\"AIzaSyAgzfSXCPiOTbUv4Y34rm2rgOGEfecsO8k\"\n",
+        "GOOGLE_API_KEY=\"\"\n",
         "genai.configure(api_key=GOOGLE_API_KEY)"
       ],
       "metadata": {
